# Evil-Code-Review

./: LICENSE  README.md  pyproject.toml
CodeReview/: __init__.py
CodeReview/models/: review.py
CodeReview/templates/: base.html  index.html  review.html
CodeReview/web/: views.py
