[project]
name = "Evil Code Review"
version = "0.1.0"
description = "A code review tool..."
authors = [{ name = "Max Miles", email = "maxmiles555@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["codereview"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"